styles.css
*, *::before, *::after {
    box-sizing: border-box;
    margin:0px;
    padding:0;
    
}

:root {
    --base: #555;
    --base-100: #f1f1f1;
    --base-400: #555;
    --base-800: #001021;
    --yellow: #ffda4b;
    --yellow-100: #fffbe6;
    --yellow-400: #ffda4b;
    --yellow-800: #8b6f00;
    --blue: #0a61ae;
    --blue-100: #e2f8ff;
    --blue-400: #0c1a31;
    --blue-800: #092741;
    --pink: #fc8eac;
    --dark-gray: #A8B4C7;
    --charcoal: #36454F;
    --gray: #808080;
    --slate-grey: #748D92;
    --space-blue: #123E66;
    --darkish-grey: #2e3944;
    --almost-black: #212a31;
    --bone: #d3d9d4;
    --darkblue:#0b132b;
    --midblue:#a3bac3;
    --blu:#082557;
}

body {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-size: 20px;
    
    padding-top:90px;
    
}

a {
    text-decoration: none;
    color: var(--blue);
    &:hover {
        text-decoration: underline;
    }
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
    padding: 0px 20px;
    display:flex;
    justify-content: space-between;
    max-width: 1440px;
    margin: 0 auto;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    background-color: white;

    .logo-holder {
        display:flex;
        padding:10px;
        align-items:center;
        font-weight:600;
        color: var(--base-800);

        .logo {
            display:flex;
            align-items:center;
            justify-content: center;
            font-size:32px;
            background-color: var(--blu);
            color: var(--base-100);
            height:64px;
            width:64px;
            margin-right:20px;
            border-radius: 50%;
        }
        .logo-text {
            flex:1;
        }
    }

    nav {
        display:flex;
        align-items: center;
        ul {
            display:flex;
            list-style-type: none;
            gap:5px;
            li {
                display:inline-block;
                a {
                    display: inline-block;
                    padding:10px 20px;
                    color:var(--base);
                    &:hover {
                        background-color: var(--base-100);
                        border-radius:10px;
                        text-decoration: none;
                    }
                }
            }

        }
        .mobile-toggle {
            display:none;
            color:var(--base-800);
            padding:10px;
            @media (max-width:768px){
                display:inline-block;
                position:absolute;
                top:20px;
                right:20px;
            }

        }
    }

    @media (max-width: 1024px) {
        flex-direction: column;
        align-items:center;

    }

    @media (max-width: 768px) {
        flex-direction: column;
        align-items:center;

        nav {
            margin-top:10px;
            width:100%;
            ul {
                display:none;
                flex-direction: column;
                text-align: center;
                width:100%;
                a {
                    width:100%;
                }
                &.active {
                    display: flex;
                }
            }
        }
    }
}

section {
    max-width: 1440px;
    margin:auto;
    gap:30px;
    margin-top:30px;
    margin-bottom: 30px;

    @media (max-width:1440px){
        padding-left:30px;
        padding-right:30px;
    }
}

.button {
    display: inline-block;
    padding:10px 30px;
    background-color: var(--blu);
    color: var(--base-100);
    border-radius: 10px;
    transition: ease 0.3s all;
    &:hover {
        text-decoration: none;
        background-color: var(--base);
        color: var(--base-100);
    }
    &.white {
        background-color: white;
        color: var(--base-800);
        &:hover {
            background-color: var(--midblue);
            color: var(--blue-800);
        }
    }
    &.black {
        background-color: var(--blu);
        color: white;
        &:hover {
            background-color: var(--base);
            color: var(--base-100);
        }
    }
}

h1 {
    font-size: 64px;
    line-height:1;
    margin-bottom:10px;
    small {
        display:block;
        font-weight:100;
    }
    @media (max-width:1024px){
        font-size: 48px;
    }
}

.hero {
    display:flex;
    @media (max-width:1024px) {
        flex-direction:column;
    }
    margin-top:30px;
    .hero-blue {
        color:var(--blu);
        flex:1;
        background-color: var(--base-100);
        border-radius:30px;
        padding:30px;
        display:flex;
        flex-direction:column;
        justify-content:center;
        span {
            @media (max-width:768px) {
                display:none;
            }
        }
        .call-to-action {
            margin-top:20px;
            margin-bottom: 10px;
            a {
                margin-right: 10px;
                margin-bottom:10px;
            }
        }
        .social-links {
            a {
                img {
                    filter: invert(27%) sepia(91%) saturate(3821%) hue-rotate(186deg) brightness(50%) contrast(150%);
                    transition: filter 0.3s ease;
                }
                &:hover {
                    text-decoration: none;
                    img {
                        filter:brightness(70%) saturate(0%) invert(80%);
                    }
                }
            }
        }
    }
    .hero-yellow {
        flex:1;
        background-color: var(--dark-gray);
        border-radius:30px;
        padding:0px 30px;
        display:flex;
        justify-content: center;
        align-items: center;
        img {
            margin-top:-60px;
            max-width:420px;
            margin-bottom:-10px;
        }
    }
}
/* ... */

